--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>for ninon</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="asset/style.css" />
   </head>
   <body>
     <div class="speaker" onclick="toggleAudio()">
@@ -54,6 +54,6 @@
       </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="asset/script.js"></script>
   </body>
 </html>
